--- a/.gitignore
+++ b/.gitignore
@@ -69,8 +69,8 @@ typings/
 .yarn-integrity
 
 # dotenv environment variables file
-.env
-.env.test
+.env/
+.env.test/ #Dit zijn directories, gitignore.io heeft da fout
 
 # parcel-bundler cache (https://parceljs.org/)
 .cache
@@ -81,7 +81,7 @@ typings/
 # Nuxt.js build / generate output
 .nuxt
 dist
-
+*
 # Gatsby files
 .cache/
 # Comment in the public line in if your project uses Gatsby and *not* Next.js
